--- a/index.html
+++ b/index.html
@@ -13,7 +13,104 @@
 </head>
 
 <body>
+    <header>
+        <div>
+            <nav class="navbar navbar-expand-lg navbar-light">
+                <div class="container">
+                    <a class="fs-1 fw-bolder text-decoration-none active text-dark" class="navbar-brand"
+                        href="#">arialkha
+                        convention
+                        center</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="fs-3 fw-bold navbar-nav ms-auto mb-2 mb-lg-0">
+                            <li class="nav-item">
+                                <a class="text-muted nav-link active" aria-current="page" href="#">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="text-muted nav-link active" aria-current="page" href="#">Contact</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="text-muted nav-link active" aria-current="page" href="#">About Us</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="text-muted nav-link active" aria-current="page" href="#">Subscribe</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+        </div>
+        <div id="carouselExampleCaptions" class="carousel slide bg-light" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                    aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                    aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                    aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="shoes/shoe-1.png" class="d-block w-100" alt="...">
+                    <div class="m-5 carousel-caption d-none d-md-block">
+                        <h1 class="fw-bolder" style="font-size: 3em;text-shadow: 2px 2px #ff0000;">The perfect venue for
+                            your next event</h1>
+                        <p style="font-size: 1.5em;">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus
+                            ipsa recusandae velit ex
+                            voluptas harum inventore perferendis minima minus praesentium voluptatum beatae, fugit sed
+                            omnis, exercitationem ratione nobis quos in!</p>
 
+                        <a class="text-decoration-none bg-dark text-white fw-bold p-2 px-3 rounded mb-5"
+                            href="https://biccbd.com/" width="24" height="12">Book Now</a>
+
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="shoes/shoe-2.png" class="d-block w-100" alt="...">
+                    <div class="m-5 carousel-caption d-none d-md-block">
+                        <h1 class="fw-bolder" style="font-size: 3em;">The perfect venue for your next event</h1>
+                        <p style="font-size: 1.5em;">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus
+                            ipsa recusandae velit ex
+                            voluptas harum inventore perferendis minima minus praesentium voluptatum beatae, fugit sed
+                            omnis, exercitationem ratione nobis quos in!</p>
+
+                        <a class="text-decoration-none bg-dark text-white fw-bold p-2 px-3 rounded mb-5"
+                            href="https://biccbd.com/" width="24" height="12">Book Now</a>
+
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="shoes/shoe-3.png" class="d-block w-100" alt="...">
+                    <div class="m-5 carousel-caption d-none d-md-block">
+                        <h1 class="fw-bolder" style="font-size: 3em;">The perfect venue for your next event</h1>
+                        <p style="font-size: 1.5em;">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus
+                            ipsa recusandae velit ex
+                            voluptas harum inventore perferendis minima minus praesentium voluptatum beatae, fugit sed
+                            omnis, exercitationem ratione nobis quos in!</p>
+
+                        <a class="text-decoration-none bg-dark text-white fw-bold p-2 px-3 rounded mb-5"
+                            href="https://biccbd.com/" width="24" height="12">Book Now</a>
+
+                    </div>
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+    </header>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
