--- a/index.html
+++ b/index.html
@@ -9,18 +9,15 @@
     <!-- Bootstrap CDN link  -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <header>
-        <div>
+        <div class="my-5">
             <nav class="navbar navbar-expand-lg navbar-light">
-                <div class="container">
-                    <a class="fs-1 fw-bolder text-decoration-none active text-dark" class="navbar-brand"
-                        href="#">arialkha
-                        convention
-                        center</a>
+                <div class="container-fluid mx-5">
+                    <a class="navbar-brand fw-bolder " style="font-size: 3.5vw;" href="#">Dream convention center</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -44,6 +41,7 @@
                     </div>
                 </div>
             </nav>
+
         </div>
         <div id="carouselExampleCaptions" class="carousel slide bg-light" data-bs-ride="carousel">
             <div class="carousel-indicators">
@@ -53,47 +51,66 @@
                     aria-label="Slide 2"></button>
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
                     aria-label="Slide 3"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3"
+                    aria-label="Slide 4"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4"
+                    aria-label="Slide 5"></button>
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="shoes/shoe-1.png" class="d-block w-100" alt="...">
-                    <div class="m-5 carousel-caption d-none d-md-block">
-                        <h1 class="fw-bolder" style="font-size: 3em;text-shadow: 2px 2px #ff0000;">The perfect venue for
+                    <img src="images/banner.png" class="d-block w-100" alt="...">
+                    <div class="carousel-caption  d-md-block">
+                        <h1 class="fw-bolder" style="font-size: 3vw;text-shadow: 4px 4px #928f8f;">The perfect venue
+                            for
                             your next event</h1>
-                        <p style="font-size: 1.5em;">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus
+                        <p style="font-size: 1.5vw;">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus
                             ipsa recusandae velit ex
                             voluptas harum inventore perferendis minima minus praesentium voluptatum beatae, fugit sed
                             omnis, exercitationem ratione nobis quos in!</p>
 
-                        <a class="text-decoration-none bg-dark text-white fw-bold p-2 px-3 rounded mb-5"
+                        <a class="text-decoration-none bg-dark text-white fw-bold p-2 px-3 rounded"
+                            href="https://biccbd.com/" width="24" height="12">Book Now</a>
+
+                    </div>
+                </div>
+                <div class="carousel-item banner-img">
+                    <img src="images/convocation.png" class="d-block w-100" alt="...">
+                    <div class="m-5 carousel-caption  d-md-block w-50">
+                        <h1 class="fw-bolder" style="font-size: 3vw;">Convocation</h1>
+                        <p style="font-size: 1.5vw;">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus
+                            ipsa recusandae velit ex
+                            voluptas harum inventore perferendis minima minus praesentium voluptatum beatae, fugit sed
+                            omnis, exercitationem ratione nobis quos in!</p>
+
+                        <a class="text-decoration-none bg-dark text-white fw-bold p-2 px-3 rounded"
                             href="https://biccbd.com/" width="24" height="12">Book Now</a>
 
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="shoes/shoe-2.png" class="d-block w-100" alt="...">
-                    <div class="m-5 carousel-caption d-none d-md-block">
-                        <h1 class="fw-bolder" style="font-size: 3em;">The perfect venue for your next event</h1>
-                        <p style="font-size: 1.5em;">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus
+                    <img src="images/exam.jpg" class="d-block w-100" alt="...">
+                    <div class="m-5 carousel-caption  d-md-block">
+                        <h1 class="fw-bolder" style="font-size: 3vw;">The perfect venue for your next event</h1>
+                        <p style="font-size: 1.5vw;">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus
                             ipsa recusandae velit ex
                             voluptas harum inventore perferendis minima minus praesentium voluptatum beatae, fugit sed
                             omnis, exercitationem ratione nobis quos in!</p>
 
-                        <a class="text-decoration-none bg-dark text-white fw-bold p-2 px-3 rounded mb-5"
+                        <a class="text-decoration-none bg-dark text-white fw-bold p-2 px-3 rounded"
                             href="https://biccbd.com/" width="24" height="12">Book Now</a>
 
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="shoes/shoe-3.png" class="d-block w-100" alt="...">
-                    <div class="m-5 carousel-caption d-none d-md-block">
-                        <h1 class="fw-bolder" style="font-size: 3em;">The perfect venue for your next event</h1>
-                        <p style="font-size: 1.5em;">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus
+                    <img src="images/prty.jpg" class="d-block w-100" alt="...">
+                    <div class="m-5 carousel-caption  d-md-block">
+                        <h1 class="fw-bolder" style="font-size: 3vw;">The perfect venue for your next event</h1>
+                        <p style="font-size: 1.5vw;">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus
                             ipsa recusandae velit ex
                             voluptas harum inventore perferendis minima minus praesentium voluptatum beatae, fugit sed
                             omnis, exercitationem ratione nobis quos in!</p>
 
-                        <a class="text-decoration-none bg-dark text-white fw-bold p-2 px-3 rounded mb-5"
+                        <a class="text-decoration-none bg-dark text-white fw-bold p-2 px-3 rounded"
                             href="https://biccbd.com/" width="24" height="12">Book Now</a>
 
                     </div>
@@ -111,6 +128,92 @@
             </button>
         </div>
     </header>
+    <section class="container">
+        <div class="row align-items-center my-5">
+            <div class="col-lg-6">
+                <img class="img-fluid" src="images/buildings.jpg" alt="">
+            </div>
+            <div class="col-lg-6">
+                <h1>A grand place all you need</h1>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorum, fuga iste, repudiandae quidem
+                    nulla incidunt sequi odit possimus quisquam accusamus maxime placeat aspernatur sunt harum nesciunt
+                    amet consequatur consectetur alias.
+
+                </p>
+                <a class="text-decoration-none p-3 bg-dark text-white rounded fw-bold" href="">Explore our area</a>
+            </div>
+        </div>
+    </section>
+    <section class="container">
+        <h1 class="fs-1 fw-bolder text-center">Our Pacakage</h1>
+        <div class="row align-items-center">
+            <div class="col-lg-3 col-md-6 col-sm-12 shadow rounded px-3 py-4 mx-3">
+                <h2 class="fw-bold text-center">$300</h2>
+                <h2 class="fw-bold">Business Fair</h2>
+                <p class="text-muted">For most businesses event
+                    like book fair, craft fair.</p>
+                <ul class="text-muted">
+                    <li>limited space access</li>
+                    <li>Secuirty facility</li>
+                    <li>event support</li>
+                    <li>Decoration design</li>
+                    <li>Per day bill</li>
+
+                </ul>
+                <a class="bg-dark text-white fw-bold text-decoration-none rounded-pill px-5 py-2" href="">Choose
+                    plan</a>
+            </div>
+            <div class="col-lg-3 col-md-6 col-sm-12 shadow rounded px-3 py-4 mx-3">
+                <h2 class="fw-bold text-center">$300</h2>
+                <h2 class="fw-bold">Business Fair</h2>
+                <p class="text-muted">For most businesses event
+                    like book fair, craft fair.</p>
+                <ul class="text-muted">
+                    <li>limited space access</li>
+                    <li>Secuirty facility</li>
+                    <li>event support</li>
+                    <li>Decoration design</li>
+                    <li>Per day bill</li>
+
+                </ul>
+                <a class="bg-dark text-white fw-bold text-decoration-none rounded-pill px-5 py-2" href="">Choose
+                    plan</a>
+            </div>
+            <div class="col-lg-3 col-md-6 col-sm-12 shadow rounded px-3 py-4 mx-3">
+                <h2 class="fw-bold text-center">$300</h2>
+                <h2 class="fw-bold">Business Fair</h2>
+                <p class="text-muted">For most businesses event
+                    like book fair, craft fair.</p>
+                <ul class="text-muted">
+                    <li>limited space access</li>
+                    <li>Secuirty facility</li>
+                    <li>event support</li>
+                    <li>Decoration design</li>
+                    <li>Per day bill</li>
+
+                </ul>
+                <a class="bg-dark text-white fw-bold text-decoration-none rounded-pill px-5 py-2" href="">Choose
+                    plan</a>
+            </div>
+            <div class="col-lg-3 col-md-6 col-sm-12 shadow rounded px-3 py-4 mx-3">
+                <h2 class="fw-bold text-center">$300</h2>
+                <h2 class="fw-bold">Business Fair</h2>
+                <p class="text-muted">For most businesses event
+                    like book fair, craft fair.</p>
+                <ul class="text-muted">
+                    <li>limited space access</li>
+                    <li>Secuirty facility</li>
+                    <li>event support</li>
+                    <li>Decoration design</li>
+                    <li>Per day bill</li>
+
+                </ul>
+                <a class="bg-dark text-white fw-bold text-decoration-none rounded-pill px-5 py-2" href="">Choose
+                    plan</a>
+            </div>
+
+        </div>
+    </section>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
