--- a/index.html
+++ b/index.html
@@ -303,10 +303,11 @@
                             href="">Choose
                             plan</a>
                     </div>
-                    <img src="images/download (1).png" weight="100" height="100"
-                        style="position: relative;bottom: 430px;left:230px;" alt="">
-
-
+                    <div>
+                        <img src="images/download (1).png" weight="100" height="100"
+                            style="position: relative;bottom: 430px;left:230px;" alt="">
+                    </div>
+                    <img src="icons/watermark.svg" style="position: relative;bottom: 491px;left:148px;" alt="">
                 </div>
                 <div class="service-component col-lg-3 col-md-6 col-sm-12 shadow px-3 py-4 mx-3"
                     style="width: 300px; border-radius: 15px;">
@@ -391,7 +392,100 @@
             </div>
         </section>
         <section class="container">
-            <div class="row align-items-center my-5 g-5">
+            <section class="container">
+                <div class="row align-items-center my-5 g-5">
+                    <h1 class="fs-1 fw-bolder text-center">Frequently Asked Questions</h1>
+                    <div class="col-lg-6 col-md-12 order-2 order-sm-2 order-md-2 order-lg-1">
+                        <div class="accordion" id="accordionExample">
+                            <div class="accordion-item my-3">
+                                <h2 class="accordion-header" id="headingOne">
+                                    <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                        data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                        What’s the difference between event design and event planning?
+                                    </button>
+                                </h2>
+                                <div id="collapseOne" class="accordion-collapse collapse show"
+                                    aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                                    <div class="accordion-body">
+                                        Event design encompasses the more creative side of event management.
+                                        While a
+                                        planner focuses on organization, we focus
+                                        on the decor of the event. From draping to lighting, furniture, and
+                                        centerpieces, it is our job to ensure your event is
+                                        truly stunning.
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="accordion-item my-3">
+                                <h2 class="accordion-header" id="headingTwo">
+                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                        data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                        How early do we need to start planning an event?
+                                    </button>
+                                </h2>
+                                <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+                                    data-bs-parent="#accordionExample">
+                                    <div class="accordion-body">
+                                        Planning an event can take from weeks to months, it really depends on the size
+                                        and
+                                        the details that the event involves.
+                                        Having enough time allows you to comfortably cover different areas and prepare
+                                        yourself for potential scenarios that
+                                        might happen so you can consider various options prior the date.
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="accordion-item my-3">
+                                <h2 class="accordion-header" id="headingThree">
+                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                        data-bs-target="#collapseThree" aria-expanded="false"
+                                        aria-controls="collapseThree">
+                                        What is your refund and cancellation policy?
+                                    </button>
+                                </h2>
+                                <div id="collapseThree" class="accordion-collapse collapse"
+                                    aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                                    <div class="accordion-body">
+                                        Refund/cancellation policies applicable in the following conditions: a) In case,
+                                        the
+                                        buyer cancels the order online
+                                        before the product has been shipped, the entire order amount will be refunded.
+                                        ...
+                                        Total order amount after deduction of
+                                        shipment and handling charges will be refunded.
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="accordion-item my-3">
+                                <h2 class="accordion-header" id="headingFour">
+                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                        data-bs-target="#collapseFour" aria-expanded="false"
+                                        aria-controls="collapseFour">
+                                        How do you keep budgets on track?
+                                    </button>
+                                </h2>
+                                <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour"
+                                    data-bs-parent="#accordionExample">
+                                    <div class="accordion-body">
+                                        As soon as you start spending your own money, it’s time to start tracking your
+                                        spending so that you can create and
+                                        follow a personal budget. Keeping track of expenses, while sometimes tedious, is
+                                        the
+                                        best way to find out exactly where
+                                        your money is going.
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="img-bg col-lg-6 col-md-12 order-1 order-sm-1 order-md-1 order-lg-2">
+                        <img class="img-fluid" src="images/people.png" alt="">
+                    </div>
+
+                </div>
+            </section>
+            <!-- <div class="row align-items-center my-5 g-5">
                 <h1 class="fs-1 fw-bolder text-center">Frequently Asked Questions</h1>
                 <div class="col-lg-6 col-md-12 order-2 order-sm-2 order-md-2 order-lg-1">
                     <div class="accordion" id="accordionExample">
@@ -405,11 +499,11 @@
                             <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
                                 data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
-                                    <strong>Event design encompasses the more creative side of event management. While a
-                                        planner focuses on organization, we focus
-                                        on the decor of the event. From draping to lighting, furniture, and
-                                        centerpieces, it is our job to ensure your event is
-                                        truly stunning.
+                                    Event design encompasses the more creative side of event management. While a
+                                    planner focuses on organization, we focus
+                                    on the decor of the event. From draping to lighting, furniture, and
+                                    centerpieces, it is our job to ensure your event is
+                                    truly stunning.
                                 </div>
                             </div>
                         </div>
@@ -469,14 +563,12 @@
                         </div>
                     </div>
                 </div>
-
                 <div class="img-bg col-lg-6 col-md-12 order-1 order-sm-1 order-md-1 order-lg-2">
                     <img class="img-fluid" src="images/people.png" alt="">
                 </div>
-
-            </div>
+            </div> -->
         </section>
-
+        <!-- planning and map -->
         <section class="container">
             <div class="row align-items-center my-5 g-5">
                 <div class="col-lg-6 col-md-12 order-2 order-sm-2 order-md-2 order-lg-1">
